--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2"
   }
 }
